--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ django-crispy-forms==2.2
 
 # Optional: if you plan to deploy (e.g., on Render, Railway, or Heroku)
 gunicorn==23.0.0
-
+twilio==8.12.0
 # Optional: to serve static files easily during deployment
 whitenoise==6.7.0
-
+dotenv==1.0.1
 waitress==2.1.2
